# panda3d-editor

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
samples/helloWorld/: main.py  project.xml
samples/helloWorld/models/: panda-model.bam  panda-walk4.bam
samples/helloWorld/scenes/: helloWorld.xml  hello_world.xml
samples/pandaObjects/: main.py  project.xml
samples/pandaObjects/models/: box.bam  environment.bam  panda-model.bam
samples/pandaObjects/scenes/: helloWorld.xml  test.xml
samples/pandaObjects/scripts/: cameraSpin.py  pandaWalk.py  sine.py
src/: main.py  pandatypes.py  run_tests.py  wxpython.py
src/p3d/: __init__.py  camera.py  commonUtils.py  constants.py  displayShading.py  editorCamera.py  frameRate.py  functions.py  geometry.py  marquee.py  mouse.py  mousePicker.py  nodePathObject.py  object.py  pandaBehaviour.py  pandaManager.py  pandaObject.py  singleTask.py  wxPanda.py
src/pandaEditor/: __init__.py  actions.py  app.py  assetManager.py  commands.py  constants.py  directorywatcher.py  dragDropManager.py  dragdroptarget.py  project.py  scene.py  sceneParser.py  sceneparser.py  selection.py  showBase.py  showbase.py  utils.py
src/samples/: main.py  project.xml
src/samples/maps/: sine.xml
src/utils/: __init__.py  directoryWatcher.py  directorywatcher.py  functions.py  singleton.py  wrappedFunction.py
src/wxExtra/: __init__.py  actionItem.py  auiManagerConfig.py  compositeDropTarget.py  customAuiToolBar.py  customListCtrl.py  customMenu.py  customTreeCtrl.py  dirTreeCtrl.py  logPanel.py  logpanel.py  propertyGrid.py  utils.py
(+242 files in other folders)
