[tool.poetry]
name = "panda3d-editor"
version = "0.1.0"
description = ""
authors = ["Derfies <Derfies@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
wxPython = "^4.1.1"
PyPubSub = "^4.0.3"
Yapsy = "^1.12.2"
intervaltree = "^3.1.0"
tabulate = "^0.8.9"
pyquaternion = "^0.9.9"
transformations = "^2021.6.6"
matplotlib = "^3.5.1"
networkx = "^2.6.3"
simple-settings = "^1.2.0"
pycsg = "^0.3.3"
pyperclip = "^1.8.2"
ordered-set = "^4.1.0"
pyclipper = "^1.3.0"
pyvista = "^0.33.3"
scipy = "^1.8.0"
colorama = "^0.4.4"
parameterized = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
